grouped config files

--- a/src/module-a/module-a.component.scss
+++ b/src/module-a/module-a.component.scss
@@ -3,7 +3,7 @@
 
 // Import Variables, Overrides, and Bootstrap
 
-@import '~bootstrap/scss/bootstrap';
+// @import '~bootstrap/scss/bootstrap';
 
 $background-color: #D8CFB2;
 
